--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "redis": "redis:6379"
+    "redis": "redis:6379",
+    "seq": "http://seq:5341"
   },
   "Logging": {
     "LogLevel": {
