--- a/WebFrontEnd/WebFrontEnd.csproj
+++ b/WebFrontEnd/WebFrontEnd.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
 </Project>
