--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,11 @@ services:
     restart: unless-stopped
     volumes:
         - ./seq-data:/data
+
+  rebrow:
+    container_name: rebrow
+    image: marian/rebrow
+    ports:
+        - "5001:5001"
+    depends_on:
+        - redis
