update dependency injection

--- a/WebFrontEnd/appsettings.json
+++ b/WebFrontEnd/appsettings.json
@@ -1,12 +1,10 @@
 {
+  "AllowedHosts": "*",
+  "ApiUrl": "http://webapi/ShortUrl",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WebFrontEndContext": "Server=(localdb)\\mssqllocaldb;Database=WebFrontEnd.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
