update api definition

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,13 +1,26 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "redis": "redis:6379",
-    "seq": "http://seq:5341"
+    "seq": "http://seq:5341",
+    "health-checks": "Server=DESKTOP-N81COE1;Database=HealthCheck;User Id=sa;Password=pass;"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Web HTTP Check",
+        "Uri": "http://web/hc"
+      },
+      {
+        "Name": "API HTTP Check",
+        "Uri": "http://api/hc"
+      }      
+    ]
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
