--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,20 +1,15 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "redis": "redis:6379",
     "seq": "http://seq:5341",
-    "health-checks": "Server=DESKTOP-N81COE1;Database=HealthCheck;User Id=sa;Password=pass;"
+    "db": "Server=sqldata;Initial Catalog=ShortenerDb;User Id=sa;Password=Pass@word"
   },
   "HealthChecksUI": {
     "HealthChecks": [
       {
-        "Name": "Web HTTP Check",
-        "Uri": "http://web/hc"
-      },
-      {
-        "Name": "API HTTP Check",
-        "Uri": "http://api/hc"
-      }      
+        "Name": "self",
+        "Uri": "/health"
+      }
     ]
   },
   "Logging": {
