--- a/WebFrontEnd/appsettings.json
+++ b/WebFrontEnd/appsettings.json
@@ -1,6 +1,10 @@
 {
   "AllowedHosts": "*",
+  "ApiHealthCheck": "http://webapi/hc",
   "ApiUrl": "http://webapi/ShortUrl",
+  "ConnectionStrings": {    
+    "seq": "http://seq:5341"    
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
