change to in memory db

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,8 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "seq": "http://seq:5341",
-    "db": "Server=sqldata;Initial Catalog=ShortenerDb;User Id=sa;Password=Pass@word"
+    "seq": "http://seq:5341"    
   },
   "HealthChecksUI": {
     "HealthChecks": [
