--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "seq": "http://seq:5341"    
+    "seq": "http://seq:5341",
+    "db": "Server=sqldata;Initial Catalog=ShortenerDb;User Id=sa;Password=Pass@word"
   },
   "HealthChecksUI": {
     "HealthChecks": [
