--- a/WebStatus/appsettings.json
+++ b/WebStatus/appsettings.json
@@ -9,8 +9,10 @@
       {
         "Name": "API HTTP Check",
         "Uri": "http://api/hc"
-      }      
-    ]
+      }
+    ],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   },
   "Logging": {
     "LogLevel": {
