--- a/.github/workflows/build-validation.yml
+++ b/.github/workflows/build-validation.yml
@@ -31,4 +31,4 @@ jobs:
       run: dotnet restore
       
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build UrlShortener.sln --configuration Release --no-restore
