--- a/WebFrontEnd/appsettings.json
+++ b/WebFrontEnd/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
-  "ApiHealthCheck": "http://webapi/hc",
-  "ApiUrl": "http://webapi/ShortUrl",  
+  "ApiHealthCheck": "http://host.docker.internal:5051/hc",
+  "ApiUrl": "http://host.docker.internal:5051/ShortUrl",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
