--- a/WebStatus/appsettings.json
+++ b/WebStatus/appsettings.json
@@ -4,11 +4,11 @@
     "HealthChecks": [
       {
         "Name": "Web HTTP Check",
-        "Uri": "http://web/hc"
+        "Uri": "http://host.docker.internal:5050/hc"
       },
       {
         "Name": "API HTTP Check",
-        "Uri": "http://api/hc"
+        "Uri": "http://host.docker.internal:5051/hc"
       }
     ],
     "EvaluationTimeInSeconds": 10,
