--- a/.github/workflows/docker-image-webfrontend.yml
+++ b/.github/workflows/docker-image-webfrontend.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag webfrontend:$(date +%s)
+      run: docker build ./WebFrontEnd/ --file Dockerfile --tag webfrontend:$(date +%s)
